# poem_admin_openapi

./: .env.sample  Cargo.toml  README.md
app/: Cargo.toml
app/src/apps/: mod.rs
app/src/apps/system/: api.rs  mod.rs
app/src/apps/system/api/: common.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
app/src/apps/system/service/: sys_dict_data.rs  sys_dict_type.rs
app/src/apps/test/: api.rs
app/src/apps/test/api/: test_data_scope.rs
app/src/utils/: api_utils.rs  jwt.rs
app_derive/: Cargo.toml  readme.md
app_derive/src/: lib.rs
config/: config.toml.sample
db/: Cargo.toml
db/examples/: tuple.rs
db/src/common/: captcha.rs  res.rs
db/src/system/entities/: prelude.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_role_dept.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_post.rs  sys_user_role.rs
db/src/system/models/: mod.rs  server_info.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
db/src/test/entities/: test_data_scope.rs
db/src/test/models/: test_data_scope.rs
migration/src/migrations/: m20220101_000001_create_table.rs
