[package]
name = "app_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_derive"
proc-macro = true

[dependencies]

proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.90"
serde_json = "1.0"
serde_qs = "0.9"
poem = {version = "1", features = ["static-files", "rustls", "compression", "multipart"]}
poem-openapi = { version = "2.0", features = ["swagger-ui", "chrono"]}
