[package]
edition = "2021"
name = "db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
configs = {path = "../configs"}
app_derive = {path = "../app_derive" }
#
poem = {version = "1", features = ["static-files", "rustls", "anyhow"]}
poem-openapi = { version = "2.0.0-alpha.4", features = ["swagger-ui", "chrono"]}
#
chrono = {version = "0.4", features = ["serde"]}
once_cell = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_qs = "0.9"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "parking_lot", "signal"]}
tracing = {git = "https://github.com/tokio-rs/tracing.git"}

[dependencies.sea-orm]
default-features = false
features = ["macros", "runtime-tokio-native-tls"]
version = "0.8"

[features]
# default = ["postgres"]
default = ["postgres", "mysql", "sqlite"]
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]
